sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:6: error: method danslOrdre has return statement; needs result type
      return true;
      ^DutchFlagAlgo:27: error: not found: value danslOdre
    if (!danslOdre(i, i+1)){
         ^